@@ -2256,36 +2256,15 @@ class CGI
       Apache.request.setup_cgi_env
     end
 
+      (class << self; self; end).class_eval do
+        const_set(:CGI_PARAMS,  [1])
+        const_set(:CGI_COOKIES, [2])
+      end
+
     extend QueryExtension
     @multipart = false
-    if "POST" != env_table['REQUEST_METHOD']
-      initialize_query()  # set @params, @cookies
-    else
-      if defined?(CGI_PARAMS)
-        @params  = CGI_PARAMS.nil?  ? nil : CGI_PARAMS.dup
-        @cookies = CGI_COOKIES.nil? ? nil : CGI_COOKIES.dup
-      else
-        initialize_query()  # set @params, @cookies
-        params  = @params.nil?  ? nil : @params.dup
-        cookies = @cookies.nil? ? nil : @cookies.dup
-        (class << self; self; end).class_eval do
-          const_set(:CGI_PARAMS,  params)
-          const_set(:CGI_COOKIES, cookies)
-        end
-        if defined?(MOD_RUBY) and (RUBY_VERSION < "1.4.3")
-          raise "Please, use ruby1.4.3 or later."
-        else
-          at_exit() do
-            if defined?(CGI_PARAMS)
-              CGI.class_eval do
-                remove_const(:CGI_PARAMS)
-                remove_const(:CGI_COOKIES)
-              end
-            end
-          end
-        end
-      end
-    end
+
+    initialize_query()  # set @params, @cookies
     @output_cookies = nil
     @output_hidden = nil
 
